# build-gpt-from-scratch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-book.yml
book/: book.toml  custom.css
book/src/: README.md  SUMMARY.md  chapter-01.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-10.md  chapter-11.md  chapter-12.md  part-1.md  part-2.md  part-3.md  part-4.md
chapters/: chap-1.md  chap-10.md  chap-11.md  chap-12.md  chap-2.md  chap-4.md  chap-5.md  chap-6.md  chap-7.md  chap-8.md  chap-9.md
code/chapter01/: bigram.py
code/chapter02/: math_foundations.py
code/chapter03/: tokenizer.py
code/chapter04/: embeddings.py
code/chapter05/: self_attention.py
code/chapter06/: multi_head_attention.py
code/chapter07/: transformer_block.py
code/chapter08/: gpt.py
code/chapter09/: train.py
code/chapter10/: finetune.py
code/chapter11/: inference.py
code/chapter12/: serve.py
