[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "build-gpt-from-scratch"
version = "0.1.0"
description = "Build a GPT-style Small Language Model from scratch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mohammed Asif", email = "webmakin@gmail.com" }]
keywords = ["gpt", "transformer", "language-model", "pytorch", "education"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=23.0", "jupyter>=1.0"]
server = ["fastapi>=0.100", "uvicorn>=0.23"]

[tool.setuptools]
packages = []
